# archettialberto.github.io

./: .gitignore  README.md  environment.yaml  pyproject.toml
.github/workflows/: build.yml
cv/templates/: _preamble.tex.j2  full.tex.j2  onepage.tex.j2
data/: awards.yaml  education.yaml  employment.yaml  profile.yaml  projects.yaml  publications.bib  research_interests.yaml  scholar_cache.json  skills.yaml  supervision.yaml  talks.yaml  teaching.yaml
logo/: compose.py
scripts/: dev.sh
src/: __init__.py  cli.py  loader.py  models.py  render_cv.py  scholar.py  theme.py
theme/: active.yaml
theme/themes/: atlas.yaml  ink.yaml  old-money.yaml
website/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/src/: config.ts  theme.tokens.json
website/src/components/: Entry.astro  Header.astro  Rule.astro  SocialIcon.astro
website/src/data/: cv.ts  site.json
website/src/layouts/: Base.astro
website/src/pages/: index.astro
website/src/styles/: global.css  theme.css
